Initial commit: Zed CV platform
